Fix resume overflow issue on small viewports

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,12 @@ TODO make me my own style sheet */
 
 .resume-contact {
     text-align: right;
-    margin-bottom: -3em;
+}
+
+@media screen and (min-width: 64rem) {
+    .resume-contact {
+        margin-bottom: -3em;
+    }
 }
 
 .resume-section h1 {
